<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.help.HelpFragment">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationViewHelp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/animation_welcome" />

        <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="191dp"
            android:layout_height="41dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/help_welcome"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/helpInfoML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:clickable="false"
            android:contextClickable="false"
            android:ems="10"
            android:enabled="true"
            android:focusable="false"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:linksClickable="false"
            android:longClickable="false"
            android:text="@string/helpInfoText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/animationViewHelp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTV" />

        <ImageView
            android:id="@+id/closeHelpInfoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/help_close_CD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/outline_close_24" />

        <TextView
            android:id="@+id/clickTipTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/clickTip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpInfoML" />

        <TextView
            android:id="@+id/haveFunTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/help_haveFunText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clickTipTV" />

        <TextView
            android:id="@+id/savedDataTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/savedData"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/haveFunTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:text="@string/help_delete"
            app:icon="@drawable/outline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/haveFunTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountAreYouSureButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:text="@string/help_delete_sure"
            android:visibility="gone"
            app:icon="@drawable/outline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/haveFunTV" />

</androidx.constraintlayout.widget.ConstraintLayout>